<resources>
    <string name="app_name">Chat_bot</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="chat_bot_vlsu">Chat-bot VLSU</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">sign up</string>
    <string name="or">OR</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="select_institute">Select institute</string>
    <string name="select_department">Select department</string>
    <string name="next">Next</string>
    <string name="enter_login">Enter login</string>
    <string name="login">Login</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password_validation_info_message">Login and password have to contain from 6 to 50 symbols</string>
    <string name="login_validation_error">Login is too short</string>
    <string name="password_validation_error">Password is too short</string>
    <string name="password_confirm_validation_error">Passwords don\'t match</string>
    <string name="fio_validation_error">Please, fill in first and last name</string>
    <string name="finish">finish</string>
    <string name="enter_message">Enter message…</string>
    <string name="send_icon">send icon</string>
    <string name="chat_here">CHAT HERE</string>
    <string name="vlsu_bot">VLSU Bot</string>
    <string name="next_step">Next step</string>
    <string name="patronymic">Patronymic</string>
    <string name="group">Group</string>
    <string name="to_chat">to chat</string>
    <string name="to_feed">to feed</string>
    <string name="feed_image">feed image</string>
    <string name="return_button">return button</string>
    <string name="go_to_web_site">go to web site</string>
    <string name="to_person">to person</string>
    <string name="sign_out">Sign out</string>
    <string name="avatar">avatar</string>
    <string name="name">Name</string>
    <string name="institute">Institute</string>
    <string name="department">Department</string>
    <integer name="max_login_length">50</integer>
    <integer name="max_password_length">50</integer>

</resources>
